--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.1",
     "nodemailer": "^6.9.2",
